add_subdirectory(resources EXCLUDE_FROM_ALL)
add_subdirectory(lib)

set(LOG4CPLUS_LIBRARY ${LOG4CPLUS_LIBRARY} PARENT_SCOPE)
set(LOG4CPLUS_INCLUDE_DIR ${LOG4CPLUS_INCLUDE_DIR} PARENT_SCOPE)
set(GTEST_LIBRARIES ${GTEST_LIBRARIES} PARENT_SCOPE)
set(GTEST_INCLUDE_DIR ${GTEST_INCLUDE_DIR} PARENT_SCOPE)
set(EIGEN3_INCLUDE_DIR ${EIGEN3_INCLUDE_DIR} PARENT_SCOPE)
#set(EIGEN3_LIBRARY ${EIGEN3_LIBRARY} PARENT_SCOPE)
set(GLPK_LIBRARIES ${GLPK_LIBRARIES} PARENT_SCOPE)
set(GLPK_INCLUDE_DIR ${GLPK_INCLUDE_DIR} PARENT_SCOPE)